--- a/docs/report/fresnelReportRefs.bib
+++ b/docs/report/fresnelReportRefs.bib
@@ -13,3 +13,21 @@
    year =      {2020},
    series =    {IOP Series in Emerging Technologies in Optics and Photonics},
 }
+
+@book{taylor99,
+   title =     {Introduzione all'Analisi degli Errori},
+   author =    {J.R.Taylor},
+   publisher = {Zanichelli},
+   isbn =      {2742772812; 9782742772810},
+}
+
+@misc{main,
+  title = {Arduino Voltage Reference},
+  howpublished = {\url{https://www.best-microcontroller-projects.com/arduino-voltage-reference.html#Calibrating_the_Arduino_Voltage_Reference}},
+  author = {John Main}
+}
+
+@misc{atmega,
+  title = {ATmega328P Datasheet},
+  howpublished = {\url{"https://ww1.microchip.com/downloads/en/DeviceDoc/Atmel-7810-Automotive-Microcontrollers-ATmega328P_Datasheet.pdf}}
+}
