--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -14,6 +14,9 @@
 \usepackage{subcaption}
 \usepackage[hang,flushmargin]{footmisc} % remove indent in footnote. % fixme maybe this
 \usepackage{float}
+\usepackage{array}
+\usepackage{booktabs}
+\usepackage{url}
 
 \raggedbottom
 
