--- a/docs/report/sections/03-apparato-e-svolgimento.tex
+++ b/docs/report/sections/03-apparato-e-svolgimento.tex
@@ -1,6 +1,6 @@
 \subsection{Apparato sperimentale}\label{subsec:apparato-sperimentale}
   L’apparato sperimentale è riportato in Fig.\ref{fig:apparato-strumentale}.
-  Un prisma(5) di vetro è posizionato all centro di una guida circolare graduata(4),
+  Un prisma(5) di vetro \emph{crown} è posizionato all centro di una guida circolare graduata(4),
   montato ad un servomotore \emph{SM-S2309S}\footnote{http://descargas.cetronic.es/microservo.pdf}.
   Un laser(1) a luce rossa e due filtri polaroid(2, 3) sono
   allineati con il prisma. Un sensore di intensità luminosa(6) \emph{TEMT6000}\footnote{https://www.sparkfun.com/datasheets/Sensors/Imaging/TEMT6000.pdf},
@@ -12,7 +12,7 @@
   Il servomotore permette di ruotare il prisma con una risoluzione angolare di 1.0° +/- 0.5°.
   L'apparato Arduino-sensore fornisce una misura dell'intensità luminosa
   sulla superficie del sensore nell'intervallo $I = [0, 1000]$ unità arbitrarie,
-  con un incertezza dello $0.8\%$ (si rimanda a Sez.\ref{subsec:calcolo-incertezza-strumentale}
+  con un'incertezza sistematica massima di $0.8\%$ (si rimanda a Sez.\ref{subsec:calcolo-incertezza-strumentale}
   per la dimostrazione di come è stato ottenuto questo valore).
 %
   \begin{figure}[h]
@@ -47,7 +47,7 @@
 \subsection{Procedura sperimentale}\label{subsec:procedura-sperimentale}
   Abbiamo seguito la procedura sperimentale riportata di seguito, ripetuta due
   volte (così come indicato nel punto 5): una per raccogliere i dati relativi a $R_\pi$ e una per i dati relativi
-  a $R_\sigma$.
+  a $R_\sigma$. Questo procedimento è stato adattato da quanto descritto in Lipson\cite{lipson20}.
   \begin{enumerate}
     \item%
       Abbiamo iniziato posizionando il polaroid(3) in modo che la polarizzazione del
@@ -68,7 +68,7 @@
       Questo ci ha permesso di sfruttare l'intero range di operatività di Arduino.
     \item%
       Abbiamo raccolto l'intensità luminosa letta dal sensore in questo punto,
-      poi abbiamo ruotato il prisma di $2^\circ$ in senso orario e abbiamo
+      poi abbiamo ruotato il prisma in senso orario e abbiamo
       allineato il sensore di conseguenza.
     \item%
       Abbiamo ripetuto il passo precedente fino a raggiungere un valore di $\theta_i$
@@ -77,16 +77,12 @@
       abbiamo ruotato di $90^\circ$ il polaroid(3) e ripetuto l'intera
       procedura un'altra volta.
   \end{enumerate}
-
-  Nel nostro caso, siamo riusciti a misurare valori nell'intervallo di ${\theta_{min} \leq \theta \leq \theta_{max}}$,
-  con ${\theta_{min}=??}$ e ${\theta_{max}=??}$ % todo add valori
-  Le dimensioni del lato del prisma utilizzato ($15mm$ di lunghezza) non permettevano
-  di andare oltre $\theta_{max}$ senza che il fascio venisse alterato, mentre il
-  limite di $\theta_{min}$ ci è stato imposto dalla geometria del sensore.
-  Abbiamo scelto un passo angolare di $2^\circ$ per permetterci di prendere un
-  numero adeguato di misure, senza allungare eccessivamente la durata dell'esperimento.
-  Per concludere questa sezione, ricordiamo che i dati raccolti \emph{non} sono
+%
+  I dati che abbiamo raccolto in questo modo non \emph{non} sono
   i coefficienti $R_\pi$ e $R_\sigma$, ma differiscono da essi per una costante
-  moltiplicativa che verrà rimossa in Sez.$\ref{subsec:analisi-dati}$.
+  moltiplicativa, che verrà determinata tramite un \emph{fit}\footnote{Avremmo potuto misurare
+  questo valore direttamente, ma in questo caso avremmo dovuto
+  abbassare ulteriormente l'intensità del fascio laser, diminuendo la precisione dei
+  dati raccolti.}, come descritto in Sez.$\ref{subsec:analisi-dati}$.
 \endinput
 
