--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -48,8 +48,9 @@
   \today
 \end{center}
 
-\section{Sommario}\label{sec:abstract}
+\begin{abstract}\label{sec:abstract}
 \input{./docs/report/sections/01-sommario.tex}
+\end{abstract}
 
 \section{Introduzione}\label{sec:introduzione}
 \input{./docs/report/sections/02-introduzione}
