--- a/docs/report/sections/01-sommario.tex
+++ b/docs/report/sections/01-sommario.tex
@@ -1,7 +1,7 @@
 In questo esperimento abbiamo analizzato il comportamento di un raggio di luce
 che colpisce la superficie di un prisma di materiale ignoto.
-Abbiamo verificato che l’intensità luminosa riflessa segue l’andamento
-previsto dalle leggi di Fresnel e abbiamo utilizzato queste leggi per misurare
-il valore dell'angolo di Brewster per il prisma.
+Abbiamo verificato che l’intensità luminosa riflessa segua l’andamento
+previsto dalle equazioni di Fresnel e abbiamo misurato il valore dell'angolo di Brewster
+per il prisma.
 I risultati ottenuti sono ?????????? compatibili/incompatibili % todo
 \endinput
