--- a/docs/report/sections/02-introduzione.tex
+++ b/docs/report/sections/02-introduzione.tex
@@ -3,12 +3,9 @@ dielettrici con indici di rifrazione $n_1$ e $n_2$ diversi, si possono verificar
 i fenomeni della riflessione e rifrazione.
 Le equazioni di Fresnel, derivabili direttamente dalle equazioni di Maxwell, % fixme in equazioni ci va maiuscola?
 descrivono un aspetto di questo comportamento, prevedendo quale frazione d'intensità
-luminosa viene riflessa e quale rifratta per ciascuna delle due componenti di
-polarizzazione.
-Indichiamo con $R_\pi$ e $R_\sigma$ le frazioni d'intensità luminosa riflessa
-polarizzate, rispettivamente, parallelamente e perpendicolarmente al piano
-d'incidenza.
-Si dimostra che valgono:
+luminosa viene riflessa e quale rifratta. Se indichiamo con $R_\pi$ e $R_\sigma$ le
+frazioni d'intensità luminosa riflessa polarizzate, rispettivamente, parallelamente
+e perpendicolarmente al piano d'incidenza, si può dimostrare che valgono:
 %
 \begin{equation}
   R_\pi = \frac {
@@ -27,8 +24,8 @@ Si dimostra che valgono:
 \end{equation}
 %
 \noindent dove $n_1$ e $n_2$ sono gli indici di rifrazione dei due mezzi, $\theta_i$ e
-$\theta_r$ sono gli angoli d'incidenza e rifrazione del raggio luminoso.
-Una dimostrazione rigorosa di come si ricavino \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s} non è oggetto
+$\theta_t$ sono gli angoli d'incidenza e rifrazione del raggio luminoso.
+Una dimostrazione rigorosa di come si ricavino le equazioni \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s} non è oggetto
 di questo testo;
 si veda Mazzoldi\cite{mazzoldi98} per ulteriori approfondimenti.
 
@@ -55,5 +52,5 @@ denominatore nell'equazione \eqref{eq:fresnel-eq-p}, si ricava la legge di Brews
 %
 \noindent  L’angolo di Brewster gode di alcune proprietà utili in diverse applicazioni
 sperimentali.
-Per approfondimenti, si consulti Mazzoldi\cite{mazzoldi98}.
+Per approfondimenti, si consulti Mazzoldi\cite{mazzoldi98} e Lipson\cite{lipson20}.
 \endinput
