--- a/docs/report/fresnelReportRefs.bib
+++ b/docs/report/fresnelReportRefs.bib
@@ -29,5 +29,5 @@
 
 @misc{atmega,
   title = {ATmega328P Datasheet},
-  howpublished = {\url{"https://ww1.microchip.com/downloads/en/DeviceDoc/Atmel-7810-Automotive-Microcontrollers-ATmega328P_Datasheet.pdf}}
+  howpublished = {\url{https://ww1.microchip.com/downloads/en/DeviceDoc/Atmel-7810-Automotive-Microcontrollers-ATmega328P_Datasheet.pdf}}
 }
