--- a/docs/report/sections/04-risultati.tex
+++ b/docs/report/sections/04-risultati.tex
@@ -41,15 +41,20 @@
   %
   \begin{table}[ht]
     \centering
-    \caption{Risultati dei \emph{fit} dei dati raccolti}
+    \caption{
+      Risultati dei \emph{fit} dei dati raccolti. Le intensità sono espresse in unità arbitrare, gli indici
+      di rifrazione e i chi quadro ridotti sono numeri puri.
+    }
     \begin{tabular}[t]{cc}
       \toprule
       Parametro &Valore ottenuto\\
       \midrule
-      $I_{0\pi}$    &??? \\ %todo
-      $I_{0\sigma}$ &??? \\ %todo
-      $n_{2\pi}$ &??? \\ %todo
-      $n_{2\sigma}$ &??? \\ %todo
+      $I_{0\pi}$ &$2550 \pm 10 (u. a.)$ \\
+      $I_{0\sigma}$ &$1340 \pm 20 (u. a.)$ \\
+      $n_{2\pi}$ &$1.493 \pm 0.006$    \\
+      $n_{2\sigma}$ &$1.490 \pm 0.010$    \\
+      $\tilde \chi^2_\pi$ &$0.59$ \\
+      $\tilde \chi^2_\sigma$ &$0.39$ \\
       \bottomrule
     \end{tabular}\label{tab:risultati-fit}
   \end{table}
@@ -69,7 +74,7 @@
 
   Normalizzando i dati, si ottengono i risultati mostrati in Fig.\ref{fig:normalised-coefficients} %todo capire se per normalizzare basta dividere per I_0, o se conviene imporre anche che i due n2 siano uguali.
                                                                     %  ceh in realtà ci sta prenderne la media per soddisfare a condizione di Lipson.
-  assieme all'andamento previsto\footnote{Calcolato supponendo di avere un valore di $n_2 = 1.519$,%todo expand me
+  assieme all'andamento previsto\footnote{Calcolato supponendo di avere un valore di $n_2 = 1.519$, %todo expand me
   caratteristico per il vetro K9 alla lunghezza della luce rossa.}.
   %
   \begin{figure}[H]
@@ -97,12 +102,16 @@
   \end{figure}
 %
 \subsection{Misura dell'angolo di Brewster}\label{subsec:angolo-di-brewster}
-  Inserendo nell'equazione \eqref{legge-brewster} $n_1 = 1.000$ e $n_2 = ???$ %todo add
-  otteniamo un valore per l'angolo di Brewster $\theta_B = ??? \pm ????$. Il valore di $n_2$ utilizzato è la media
-  dei due coefficienti in Tab.\ref{tab:risultati-fit}.
+  Inserendo nell'equazione \eqref{legge-brewster} $n_1 = 1.000$ e $n_2 = 1.492 \pm 0.008$
+  otteniamo un valore per l'angolo di Brewster $\theta_B = \arctan{(n_2 / n_1)} = \arctan{(1.492)} = 56.2^\circ \pm 0.1^\circ$. Il valore di $n_2$ utilizzato è la media
+  dei due coefficienti in Tab.\ref{tab:risultati-fit} e l'incertezza associata è data dalla formula generale per la
+  propagazione degli errori (come descritto in Taylor\cite{taylor99}).
   Possiamo ottenere un'altra stima per $\theta_B$ con un \emph{fit} parabolico nella stretta regione
   dove $R_\pi$ si annulla; il vertice della parabola è la miglior stima per $\theta_B$.
-  Il risultato ottenuto è $\theta_B = ???$, ed è mostrato in figura \ref{fig:brewsters-angle}. %todo add
+  La funzione uitlizzata per il \emph{fit} è $y = a(x - \theta_B)^2$, dove il parametro $\theta_B$ è la
+  miglior stima per il valore dell'angolo di Brewster.
+  Il risultato ottenuto è mostrato in figura \ref{fig:brewsters-angle}. I valori numerici
+  dei parametri risultanti dal fit sono riportati in Tab.\ref{fit-brewster}
   %
   \begin{figure}[h]
     \centering
@@ -110,6 +119,20 @@
     \includegraphics[width=7cm]{./graphs/brewsters-angle.png}
     \label{fig:brewsters-angle}
   \end{figure}
+  \begin{table}[ht]
+    \centering
+    \caption{
+      Risultati numerici del \emph{fit} parabolico per determinare l'angolo di Brewster.
+    }
+    \begin{tabular}[t]{cc}
+      \toprule
+      Parametro &Valore ottenuto\\
+      \midrule
+      $a$ &$0.29 \pm 0.02 (u.a.)$ \\
+      $\theta_B$ &$56.8^\circ \pm 0.2^\circ$ \\
+      \bottomrule
+    \end{tabular}\label{tab:fit-brewster}
+  \end{table}
   % TODO
 \endinput
 
