--- a/docs/report/sections/04-risultati.tex
+++ b/docs/report/sections/04-risultati.tex
@@ -53,14 +53,14 @@
       $I_{0\sigma}$ &$1340 \pm 20 (u. a.)$ \\
       $n_{2\pi}$ &$1.493 \pm 0.006$    \\
       $n_{2\sigma}$ &$1.490 \pm 0.010$    \\
-      $\tilde \chi^2_\pi$ &$0.59$ \\
-      $\tilde \chi^2_\sigma$ &$0.39$ \\
+      $\tilde \chi^2_\pi$ &$0.71$ \\
+      $\tilde \chi^2_\sigma$ &$1.17$ \\
       \bottomrule
     \end{tabular}\label{tab:risultati-fit}
   \end{table}
   %
   Abbiamo misurato valori nell'intervallo di ${\theta_{min} \leq \theta \leq \theta_{max}}$,
-  con ${\theta_{min} = 7^\circ \pm 0.5^\circ}$ e ${\theta_{max} = 83^\circ \pm 0.5^\circ}$.
+  con ${\theta_{min} = 7^\circ \pm 0.5^\circ}$ e $\theta_{max} = 83^\circ \pm 0.5^\circ$.
   Le dimensioni del lato del prisma utilizzato ($15mm$ di lunghezza) non permettevano
   di andare oltre $\theta_{max}$ senza che il fascio venisse alterato, mentre il
   limite di $\theta_{min}$ ci è stato imposto dalla geometria del sensore.
