Add results to abstract

--- a/docs/report/sections/03-apparato-e-svolgimento.tex
+++ b/docs/report/sections/03-apparato-e-svolgimento.tex
@@ -1,6 +1,6 @@
 \subsection{Apparato sperimentale}\label{subsec:apparato-sperimentale}
   L’apparato sperimentale è riportato in Fig.\ref{fig:apparato-strumentale}.
-  Un prisma(5) di vetro \emph{crown} è posizionato all centro di una guida circolare graduata(4),
+  Un prisma(5) di vetro \emph{crown}, con indice di rifrazione $n_2$ sconosciuto,  è posizionato all centro di una guida circolare graduata(4),
   montato ad un servomotore \emph{SM-S2309S}\footnote{http://descargas.cetronic.es/microservo.pdf}.
   Un laser(1) a luce rossa e due filtri polaroid(2, 3) sono
   allineati con il prisma. Un sensore di intensità luminosa(6) \emph{TEMT6000}\footnote{https://www.sparkfun.com/datasheets/Sensors/Imaging/TEMT6000.pdf},
