--- a/docs/report/sections/04-risultati.tex
+++ b/docs/report/sections/04-risultati.tex
@@ -71,7 +71,6 @@
   Le incertezze associate ad ogni punto sono state ottenute come somma somma di
   incertezze sistematiche dovute all'attrezzatura e di incertezze casuali, come
   descritto in Sez.\ref{subsec:calcolo-incertezza-strumentale} e Sez.\ref{subsec:calcolo-incertezza-casuale}.
-
   Normalizzando i dati, si ottengono i risultati mostrati in Fig.\ref{fig:normalised-coefficients} %todo capire se per normalizzare basta dividere per I_0, o se conviene imporre anche che i due n2 siano uguali.
                                                                     %  ceh in realtà ci sta prenderne la media per soddisfare a condizione di Lipson.
   assieme all'andamento previsto\footnote{Calcolato supponendo di avere un valore di $n_2 = 1.519$, %todo expand me
@@ -111,7 +110,7 @@
   La funzione uitlizzata per il \emph{fit} è $y = a(x - \theta_B)^2$, dove il parametro $\theta_B$ è la
   miglior stima per il valore dell'angolo di Brewster.
   Il risultato ottenuto è mostrato in figura \ref{fig:brewsters-angle}. I valori numerici
-  dei parametri risultanti dal fit sono riportati in Tab.\ref{fit-brewster}
+  dei parametri risultanti dal fit sono riportati in Tab.\ref{tab:fit-brewster}
   %
   \begin{figure}[h]
     \centering
