--- a/docs/report/report.tex
+++ b/docs/report/report.tex
@@ -12,7 +12,7 @@
 \usepackage{multicol}
 \usepackage{amsmath}
 \usepackage{subcaption}
-\usepackage[hang,flushmargin]{footmisc} % remove indent in footnote. % fixme maybe this
+\usepackage[hang, flushmargin, multiple]{footmisc} % remove indent in footnote. % fixme maybe this
 \usepackage{float}
 \usepackage{array}
 \usepackage{booktabs}
