--- a/docs/report/sections/02-introduzione.tex
+++ b/docs/report/sections/02-introduzione.tex
@@ -24,7 +24,8 @@ e perpendicolarmente al piano d'incidenza, si può dimostrare che valgono:
 \end{equation}
 %
 \noindent dove $n_1$ e $n_2$ sono gli indici di rifrazione dei due mezzi, $\theta_i$ e
-$\theta_t$ sono gli angoli d'incidenza e rifrazione del raggio luminoso.
+$\theta_t$ sono gli angoli d'incidenza e rifrazione\footnote{La $t$ in $\theta_t$ sta per "trasmesso". Convenzionalmente, con
+$\theta_r$ si indica l'angolo di riflessione.} del raggio luminoso.
 Una dimostrazione rigorosa di come si ricavino le equazioni \eqref{eq:fresnel-eq-p} e \eqref{eq:fresnel-eq-s} non è oggetto
 di questo testo;
 si veda Mazzoldi\cite{mazzoldi98} per ulteriori approfondimenti.
