--- a/docs/report/sections/04-risultati.tex
+++ b/docs/report/sections/04-risultati.tex
@@ -117,7 +117,7 @@
   %
   \begin{figure}[h]
     \centering
-    \caption{brema}
+    \caption{Fit parabolico dell'angolo di brewster.}
     \includegraphics[width=7cm]{./graphs/brewsters-angle.png}
     \label{fig:brewsters-angle}
   \end{figure}
