Add real graphs

--- a/docs/report/sections/03-apparato-e-svolgimento.tex
+++ b/docs/report/sections/03-apparato-e-svolgimento.tex
@@ -17,7 +17,6 @@
 %
   \begin{figure}[h]
     \centering
-    \caption{Apparato sperimentale e schema circuitale.}
     \begin{subfigure}{.4\textwidth}
       \includegraphics[width=7cm]{instrumental-apparatus.png}
       \caption{
@@ -42,6 +41,7 @@
       }
       \label{fig:diagramma-circuito}
     \end{subfigure}
+    \caption{\emph{Apparato sperimentale e schema circuitale.}}
   \end{figure}
 %
 \subsection{Procedura sperimentale}\label{subsec:procedura-sperimentale}
